place order uri fixes